# youtube-tools

./: .gitignore  README.md  main.py  pyproject.toml  run.py  translate.py  upload.py
sample/: en.srt  input.json  ja.srt  ko.srt  metadata.json  prompt.txt
